# Create-Password

./: .gitignore  LICENSE  README.md  app.py  password-generator.desktop  password_generator.py  pyproject.toml  requirements.txt
scripts/: install.sh  uninstall.sh  upgrade.sh
scripts/arch/: install.sh  uninstall.sh  upgrade.sh
scripts/debian/: install.sh  uninstall.sh  upgrade.sh
scripts/fedora/: install.sh  uninstall.sh  upgrade.sh
scripts/opensuse/: install.sh  uninstall.sh  upgrade.sh
scripts/void/: install.sh  uninstall.sh  upgrade.sh
tests/: test_password_generator.py
